# taru_agent

./: Dockerfile  README.md  USER_GUIDE.md  requirements.txt
apps/: README.md  TaruAIcli.py  config.yaml
src/: README.md  __init__.py  pyproject.toml  requirements.txt
src/TaruAgent/: TaruAgent.py  __init__.py
src/TaruAgent/adapters/: __init__.py  gemini_adapter.py  ollama_adapter.py  openai_chat_completions_adapter.py  openai_responses_adapter.py
testing/: T5_tests_explanation.txt  run_T1_actions_jumps.py  run_T2_handoff_actions.py  run_T3_catchall_actions_jump.py  run_T4_history_integrity.py  run_T5_robustness.py  run_T6_mcp.py  run_tests.py
testing/config_google_v1beta/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/config_ollama_chat/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/config_openai_chat/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/config_openai_response/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/config_openai_response_o4/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/config_openai_response_o4_response_id/: config_T1.yaml  config_T2.yaml  config_T3.yaml  config_T4.yaml  config_T5.yaml  config_T6.yaml
testing/custom_actions/: T1_actions.py  T2_actions.py  T3_actions.py  T4_actions.py  T5_actions.py
testing/data/: customer_lookup.json  (+4 more)
(+19 files in other folders)
